docroot/themes/custom/transac/alshaya_victoria_secret/sass/components/address/_address-book.scss
.user__address--column {
  @include breakpoint($only-tablet) {
    width: 100%;
    margin-#{$right}: 0;
    float: none;
  }

  @include breakpoint($desktop) {
    margin-bottom: 1.5rem;
  }

  .address--label {
    font-family: $vs-bold;
  }
}

.c-address-book {
  .block-system > a.use-ajax {
    padding: 0.75rem 2.25rem;

    @include breakpoint($desktop) {
      top: -0.75rem;
    }
  }

  .profile-form .form-actions .form-submit {
    padding: 0.125rem 1rem;
  }
}

.view-address-book {
  @include breakpoint($tablet) {
    padding-top: 1.5rem;
  }
}

.address {
  .address--data {
    min-height: 0;

    @include breakpoint($tablet) {
      padding: 1.125rem;
    }

    @include breakpoint($desktop) {
      min-height: 10rem;
      padding: 1rem;
    }
  }

  .address--content {
    font-size: 0.875rem;
    padding-bottom: 0.125rem;
    word-break: break-all;

    @include breakpoint($tablet) {
      padding-bottom: 0.0625rem;
    }
  }

  .address--contact {
    margin-top: 2.375rem;
  }

  .address--edit,
  .address--delete {
    a {
      padding: 0.625rem 0.8rem;
      min-width: 4.75rem;

      @include breakpoint($desktop) {
        border: 0;
        display: block;
      }
    }
  }

  .address--options {
    @include breakpoint($desktop) {
      padding: 0;
      padding-#{$left}: 0.675rem;
    }
  }

  .address--userinfo {
    @include breakpoint($only-tablet) {
      width: 63%;
    }
  }

  .address--delivery {
    @include breakpoint($only-tablet) {
      width: 37%;
    }
  }

  .address--controls {
    font-size: 0.875rem;
    text-transform: capitalize;

    @include breakpoint($upto-desktop) {
      width: auto;
      padding: 0;
    }

    &.address--primary {
      width: 78%;

      @include breakpoint($upto-desktop) {
        padding-#{$left}: 2rem;
      }

      span,
      a {
        &::before {
          height: 1rem;
          width: 1rem;

          @include breakpoint($upto-desktop) {
            #{$left}: 0.675rem;
          }

          @include breakpoint($upto-tablet) {
            top: 47%;
          }
        }
      }
    }

    @include breakpoint($desktop) {
      border-#{$right}: 0.0625rem solid $address_book_border;
      padding-#{$right}: 0;
    }

    &:last-child {
      border-#{$right}: 0;
    }
  }

  .address--primary {
    letter-spacing: 0;
    text-align: $left;
  }
}

.path--user {
  .ui-dialog {
    .ui-dialog-buttonpane {
      .ui-dialog-buttonset {
        @include breakpoint($upto-tablet) {
          float: none;
          margin-#{$left}: -1.25rem;
        }

        .button {
          text-transform: uppercase;
          font-size: 0.875rem;

          @include breakpoint($upto-tablet) {
            display: block;
            margin: 0 auto;
            width: 90%;
          }
        }
      }
    }
  }
}

.c-address-book .profile-form {
  .form-actions {
    .cancel-button {
      text-transform: uppercase;
      color: $address_book_delete_cancel;
      margin-top: 0.125rem;
    }
  }
}

.address-book-address {
  .form-type-select {
    .select2-selection__arrow {
      &::after {
        font-size: 2.5625rem;
        top: -1px;
        #{$left}: 0;
      }
    }
  }
}

