AAVS-71: VS CC fixes for mobile number label and empty store list container overlap.

--- a/docroot/themes/custom/transac/alshaya_victoria_secret/sass/components/address/_address-book.scss
+++ b/docroot/themes/custom/transac/alshaya_victoria_secret/sass/components/address/_address-book.scss
@@ -187,4 +187,8 @@
       }
     }
   }
+
+  input[type="tel"] {
+    font-size: 1rem !important;
+  }
 }
